--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "/public/build"
   ],
   "dependencies": {
+    "@libsql/client": "^0.5.6",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "@remix-validated-form/with-zod": "^2.0.6",
+    "bcrypt": "^5.1.1",
+    "drizzle-orm": "^0.30.4",
     "envalid": "^7.3.1",
     "isbot": "^3.7.0",
+    "libsql": "^0.3.10",
     "nock": "^13.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix": "^2.8.1",
     "remix-auth": "^3.5.1",
     "remix-auth-form": "^1.3.0",
     "remix-validated-form": "^5.1.0",
