--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/serve": "^1.19.3",
     "@remix-validated-form/with-zod": "^2.0.6",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
     "drizzle-orm": "^0.30.4",
     "envalid": "^7.3.1",
     "isbot": "^3.7.0",
@@ -36,8 +37,10 @@
     "remix-auth-form": "^1.3.0",
     "remix-validated-form": "^5.1.0",
     "resend": "^1.1.0",
+    "sqlite": "^5.1.1",
     "stripe": "^13.4.0",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.1",
+    "turso": "^0.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -58,7 +61,7 @@
     "binode": "^1.0.5",
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.19.13",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.14.0",
