--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@remix-validated-form/with-zod": "^2.0.6",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^9.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.4",
     "envalid": "^7.3.1",
     "isbot": "^3.7.0",
     "libsql": "^0.3.10",
+    "lucide-react": "^0.363.0",
     "nock": "^13.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +42,8 @@
     "resend": "^1.1.0",
     "sqlite": "^5.1.1",
     "stripe": "^13.4.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.1",
     "turso": "^0.1.0"
   },
