--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@libsql/client": "^0.5.6",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
