--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "@remix-validated-form/with-zod": "^2.0.6",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^9.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.4",
